Try 5: Fixing horizontal scroll on mobile screens

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -165,6 +165,10 @@ html {
     display: none;
   }
 
+  .hamburger-menu-mobile {
+    display: none;
+  }
+
   .brand-menu {
     margin-top: 30px;
   }
